# aiagents_adk

./: .gitignore  README.md  prompt.md
agents/email_responder/docs/: pubsub-fix-summary.md
agents/email_responder/gmail-consent-app/: Dockerfile  README.md  dev.sh  pyproject.toml
agents/email_responder/gmail-consent-app/src/: app.py
agents/email_responder/gmail-responder-agent/: .gcloudignore  Dockerfile  README.md  deploy.sh  pyproject.toml
agents/email_responder/gmail-responder-agent/src/: main.py
agents/email_responder/scripts/: bootstrap-infra.sh  setup-email-infra.sh
agents/vertex-adk/: README.md  deploy.sh  pyproject.toml
agents/vertex-adk/src/: __init__.py  app.py
common_modules/rag/: ingest.py  setup.sh
common_modules/rag_local/: Dockerfile  README.md  build-docker.sh  pyproject.toml  requirements.txt
common_modules/rag_local/input/: example.txt
common_modules/rag_local/output/: model_info.json  readme.md
common_modules/rag_local/rag/: api.py  build_vectors.py  embedding_models.py
common_modules/rag_local/rag_output/: metadata.json
docs/: runbook.md
docs/kb/: sample.md  windsor_email_ai.md
gmail-agent/: .dockerignore  .gitignore  README.md  pyproject.toml  update-env.sh
gmail-agent/src/: __init__.py  main.py
rag/: README.md  create_index.py  ingest.py  pyproject.toml
samples/: pubsub.json
scripts/: bootstrap-infra.sh  fix-pubsub.sh
services/receiver/: README.md  deploy.sh  dev.sh  pyproject.toml
services/receiver/src/: app.py
tools/replay/: replay.py
