[project]
name = "gmail-agent"
version = "0.1.0"
description = "Simple Cloud Run API service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
]

[tool.uv]
package = true

[tool.uv.sources]
gmail-agent = {path = "src"}

